sys.exit() option added

--- a/Battleships - Final.ipynb
+++ b/Battleships - Final.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "26e809cc-9def-44e4-8cf9-a76b06e429ce",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "# Library imports\n",
     "import random\n",
     "from getpass import getpass\n",
+    "import sys\n",
     "\n",
     "import IPython\n",
     "from IPython.display import display, clear_output\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "id": "5cfb81d7-047a-445b-bd48-103ed182f5e2",
    "metadata": {},
    "outputs": [],
@@ -112,6 +113,9 @@
     "def enforce_player_coord(coord):\n",
     "    \"\"\"Ensures a player coordinate input is in the valid 'A1' - 'J10' format. Returns coord once in the correct format.\"\"\"\n",
     "    # Ensure second item in coord is a number\n",
+    "    if coord.lower() == \"exit\":\n",
+    "        sys.exit(\"Exited Battleships\")\n",
+    "    \n",
     "    try:\n",
     "        int(coord[1])\n",
     "    except (ValueError, IndexError):\n",
@@ -122,6 +126,8 @@
     "    while len(coord) > 3 or len(coord) < 2 or \\\n",
     "    (len(coord) == 3 and coord[1:3] != \"10\") or \\\n",
     "    coord[0] not in letters or int(coord[1]) not in range(1, 10):\n",
+    "        if coord.lower() == \"exit\":\n",
+    "            sys.exit(\"Exited Battleships\")\n",
     "        with text_update:\n",
     "            print(\"Coordinates must be in format 'LetterNumber' (e.g. 'A1').\")\n",
     "        coord = input(\"Enter coordinates (in the format 'A1'): \").upper()\n",
@@ -240,7 +246,7 @@
     "    while guess in player_guesses:\n",
     "        with text_update:\n",
     "            print(\"Coordinates already guessed!\")\n",
-    "        guess = enforce_player_coord(input(\"Enter coordinates (in the format 'A1'): \")).upper() \n",
+    "        guess = enforce_player_coord(input(\"Enter coordinates (in the format 'A1'): \").upper())\n",
     "    \n",
     "    player_guesses.append(guess) # adds guess to guess history\n",
     "    position = coord_string_to_digit(guess)\n",
@@ -285,12 +291,18 @@
     "    Once second player is ready, sets turn to their go and displays their board.\"\"\"\n",
     "    \n",
     "    global turn\n",
+    "    \n",
+    "    clear_output()\n",
+    "    display(app)\n",
+    "\n",
     "    boards.clear_output()\n",
     "    with text_update:\n",
     "        clear_output()\n",
     "        print(\"Text updates:\\n\")\n",
     "    ready = input(f\"{name}, enter Y to continue: \").upper()\n",
     "    while ready != \"Y\":\n",
+    "        if ready.lower() == \"exit\":\n",
+    "            sys.exit(\"Exited Battleships\")\n",
     "        ready = input(f\"{name}, enter Y to continue: \").upper()\n",
     "    turn = name\n",
     "\n",
@@ -409,24 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "id": "41a10a12",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to Battleships!\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4c610832482474c8cc13d298137c032",
+       "model_id": "bd8891e47d8346da93e1f3d48c1edcb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,17 +442,14 @@
      "output_type": "display_data"
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[89], line 89\u001b[0m\n\u001b[0;32m     86\u001b[0m turn \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;66;03m# Ask for player names\u001b[39;00m\n\u001b[1;32m---> 89\u001b[0m player_1_name, player_2_name \u001b[38;5;241m=\u001b[39m player_names()\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m text_update:\n\u001b[0;32m     92\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mText updates:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[86], line 5\u001b[0m, in \u001b[0;36mplayer_names\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplayer_names\u001b[39m():\n\u001b[0;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Asks for the names of the players and returns both in a tuple.\"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     player_1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlayer name: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m     player_2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlayer name: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m player_1, player_2\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1202\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1200\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1201\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1202\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1203\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1204\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1205\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1206\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1207\u001b[0m )\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1245\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1242\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1243\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1244\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1245\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1246\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1247\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Kostis wins, congratulations!\n",
+      "\n",
+      "Do you want to play again (Y/N)? n\n"
      ]
     }
    ],
@@ -572,18 +573,38 @@
     "            with boards:\n",
     "                display_boards(player_1_name, radar_lst_p1, sea_lst_p1)\n",
     "            place_boats(player_1_name, radar_lst_p1, sea_lst_p1, player_1_boat_coords)\n",
+    "            ready = \"\"\n",
+    "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
+    "                ready = input(f\" Ready to pass to {player_2_name}? \").upper()\n",
     "            new_turn(player_2_name)\n",
     "            # Player 2 places ships\n",
     "            place_boats(player_2_name, radar_lst_p2, sea_lst_p2, player_2_boat_coords)\n",
+    "            ready = \"\"\n",
+    "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
+    "                ready = input(f\" Ready to pass to {player_1_name}? \").upper()\n",
     "            new_turn(player_1_name)\n",
     "        else:\n",
     "            # Player 2 places ships\n",
     "            with boards:\n",
     "                display_boards(player_2_name, radar_lst_p2, sea_lst_p2)\n",
     "            place_boats(player_2_name, radar_lst_p2, sea_lst_p2, player_2_boat_coords)\n",
+    "            ready = \"\"\n",
+    "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
+    "                ready = input(f\" Ready to pass to {player_1_name}? \").upper()\n",
     "            new_turn(player_1_name)\n",
     "            # Player 1 places ships\n",
     "            place_boats(player_1_name, radar_lst_p1, sea_lst_p1, player_1_boat_coords)\n",
+    "            ready = \"\"\n",
+    "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
+    "                ready = input(f\" Ready to pass to {player_2_name}? \").upper()\n",
     "            new_turn(player_2_name)\n",
     "\n",
     "    # Taking turns to fire\n",
@@ -613,6 +634,8 @@
     "            # Call new_turn() to initiate change of turn\n",
     "            ready = \"\"\n",
     "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
     "                ready = input(f\" Ready to pass to {player_2_name}? \").upper()\n",
     "            new_turn(player_2_name)\n",
     "\n",
@@ -640,6 +663,8 @@
     "            # Call new_turn() to initiate change of turn\n",
     "            ready = \"\"\n",
     "            while ready != \"Y\":\n",
+    "                if ready.lower() == \"exit\":\n",
+    "                    sys.exit(\"Exited Battleships\")\n",
     "                ready = input(f\" Ready to pass to {player_1_name}? \").upper()\n",
     "            new_turn(player_1_name)\n",
     "\n",
