--- a/Jupyter_Battleships.ipynb
+++ b/Jupyter_Battleships.ipynb
@@ -5,17 +5,17 @@
    "id": "f5a4ce30",
    "metadata": {},
    "source": [
-    "# Battleships"
+    "# Jupyter Battleships"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26e809cc-9def-44e4-8cf9-a76b06e429ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Library imports\n",
+    "# Imports\n",
     "import random\n",
     "from getpass import getpass\n",
     "import sys\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions (19)\n",
+    "# Functions\n",
     "\n",
     "def player_names():\n",
     "    \"\"\"Asks for the names of the players and returns both in a tuple.\"\"\"\n",
@@ -385,9 +385,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "41a10a12",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Gameplay\n",
@@ -630,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
